src/test/deca/syntax/invalid/class/error_public_field_not_exist.deca
/// Description:
// 	  Test of syntax of classes with public fields and without methods
// 
//  Resultats:
//    Syntax error
//    line 10
// Historique:
// 	  cree le 18/01/2023
class A {
    public void x;
}